Task-51383 : Fix Display search filter objects in mobile (#356)
Prior this change, a bad display of filtred ojects in mobile view (one over the other)
Fix: display in one line with horizontal scroll

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/Search/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/Search/Style.less
@@ -27,6 +27,11 @@
     }
   }
 
+  .searchConnectorsParent {
+    white-space: nowrap;
+    overflow-x: auto;
+    display: -webkit-box!important;
+  }
   .searchResultsParent {
     .searchCard {
       max-width: 224px !important;
